--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Log File ###
+SkyBattle.log
+SkyBattle.log.lck
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
