--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,18 @@
       <artifactId>javafx-controls</artifactId>
       <version>19.0.2</version>
     </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>19.0.2</version>
     </dependency>
+    
+    <dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-media</artifactId>
+      <version>19.0.2</version>
+</dependency>
 
 <dependency>
       <groupId>org.junit.jupiter</groupId>
