--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
       <version>4.0.17</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.6.0</version> 
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.6.0</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
